--- a/src/Translations/en/Global.json
+++ b/src/Translations/en/Global.json
@@ -42,6 +42,12 @@
                 "description":"Free Code Camp",
                 "finished":"2023",
                 "link":"https://www.freecodecamp.org/certification/fccfb6a016f-b514-4d74-97e4-76d1dcda203d/responsive-web-design"
+            },
+            "course5":{
+                "title":"JavaScript Algorithms and Data Structures",
+                "description":"Free Code Camp",
+                "finished":"2023",
+                "link":"https://www.freecodecamp.org/certification/fccfb6a016f-b514-4d74-97e4-76d1dcda203d/javascript-algorithms-and-data-structures"
             }}
         },
         "Skills":{
