--- a/src/Translations/en/Global.json
+++ b/src/Translations/en/Global.json
@@ -17,7 +17,7 @@
             "resume":"Certificates",
             "download":"Download CV",
             "aboutMe":"About me",
-            "me": "My name is Antonio Giambra. I was born and raised in Caracas-Venezuela and currently reside in Dublín-Ireland. I'm very passionate about travelling and learning from different cultures around the world. I am a self-taught web developer and highly motivated for learning new technologies.",
+            "me": "I was born and raised in Caracas-Venezuela and currently reside in Dublín-Ireland. I am very passionate about travelling and learning from different cultures around the world. I am a self-taught web developer, and I am currently working towards earning a diploma in software development to expand my knowledge of the IT sector and achieve my goal of becoming a Full-Stack developer",
             "courses":{
                 "course1" : {
                 "title":"Web Development introduction HTML",
