--- a/src/Translations/es/Global.json
+++ b/src/Translations/es/Global.json
@@ -17,7 +17,7 @@
             "resume":"Certificados",
             "download":"Descargar CV",
             "aboutMe":"Acerca de mi",
-            "me": "Mi nombre es Antonio Giambra. Nací y crecí en Caracas-Venezuela y actualmente vivo en Dublín-Irlanda. Me apasiona viajar y aprender de diferentes culturas de todo el mundo. Soy desarrollador web autodidacta y estoy muy motivado por aprender nuevas tecnologías.",
+            "me": "Nací y crecí en Caracas-Venezuela y actualmente vivo en Dublín-Irlanda. Me apasiona viajar y aprender de diferentes culturas de todo el mundo. Soy un desarrollador web autodidacta, y actualmente estoy trabajando para obtener un diploma en desarrollo de software para ampliar mis conocimientos del sector de Tecnología y lograr mi objetivo de convertirme en un desarrollador Full-Stack.",
             "courses":{
                 "course1" : {
                 "title":"Introducción al desarrollo web: HTML",
