--- a/src/Translations/en/Global.json
+++ b/src/Translations/en/Global.json
@@ -72,7 +72,7 @@
             "Hskills":"Hard Skills"
         },
         "Projects":{
-            "project":"These are some projects",
+            "project":"These are mine projects",
             "small":"Show All",
             "jquery":"JQuery",
             "react":"React Js",
