--- a/src/Translations/en/Global.json
+++ b/src/Translations/en/Global.json
@@ -117,7 +117,7 @@
             "email":"Email",
             "message":"Message",
             "send":"Send Email",
-            "spotify":"My Spotify Playlist",
+            "spotify":"My Playlist",
             "spotifyText":"Do you like to listen to music while coding? I invite you to listen to my Electronic Music playlist to enjoy and stay focused on your coding."
         }
     }
