title change, php logo included

--- a/src/Translations/en/Global.json
+++ b/src/Translations/en/Global.json
@@ -9,7 +9,7 @@
         },
         "Home":{
             "name":"Antonio Giambra",
-            "profile":"Front-End Developer",
+            "profile":"Full-Stack Developer",
             "read-more":"Read more"
         },
         "About":{
