--- a/src/Translations/es/Global.json
+++ b/src/Translations/es/Global.json
@@ -9,7 +9,7 @@
         },
         "Home":{
             "name":"Antonio Giambra",
-            "profile":"Desarrollador Full-Stack",
+            "profile":"Desarrollador Front-End",
             "read-more":"Leer más"
         },
         "About":{
