subtitle changed, width changed also

--- a/src/Translations/en/Global.json
+++ b/src/Translations/en/Global.json
@@ -9,7 +9,7 @@
         },
         "Home":{
             "name":"Antonio Giambra",
-            "profile":"Front-End Developer",
+            "profile":"Software Developer & Data Analyst",
             "read-more":"Read more"
         },
         "About":{
